--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,13 @@
     <string name="forgot_password2">Forgot Password</string>
     <string name="old_password">Old Password</string>
     <string name="change_password">Change Password</string>
+    <string name="add">Add</string>
+    <string name="home">Home</string>
     <string name="categories">Categories</string>
+    <string name="my_cart">My Cart</string>
+    <string name="more">More</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="my_order">My Order</string>
+    <string name="about_us">About Us</string>
 </resources>
